# qqmusic-island

./: CMakeLists.txt  LICENSE
src/: main.cpp  mpris_watcher.cpp  mpris_watcher.hpp
